K8S/bots-gateway-depl.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: bots-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bots-gateway
  template:
    metadata:
      labels:
        app: bots-gateway
    spec:
      containers:
        - name: bots-gateway
          image: ilya02il/bots-gateway:latest

---

apiVersion: v1
kind: Service
metadata:
  name: bots-gateway-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: bots-gateway
  ports:
  - name: bots-gateway
    protocol: TCP
    port: 80
    targetPort: 80
