K8S/identity-mssql-depl.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: identity-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-mssql
  template:
    matadata:
      labels:
        app: identity-mssql
    spec:
      containers:
        - name: identity-mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          -name: SA_PASSWORD
            valueFrom:
            secretKeyRef:
              name: mssql
              key: SA_PASSWORD
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-claim

---

apiVersion: v1
kind: Service
metadata:
  name: identity-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: identity-mssql
  ports:
  - name: identity-mssql
    protocol: TCP
    port: 1433
    targetPort: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: identity-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: identity-mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
