K8S/schedules-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedules-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedules-service
  template:
    metadata:
      labels:
        app: schedules-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: schedules-service
          image: ilya02il/schedule-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: schedules-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: schedules-service
  ports:
  - name: schedules-service
    protocol: TCP
    port: 80
    targetPort: 80
  - name: schedules-grpc
    protocol: TCP
    port: 666
    targetPort: 666
