K8S/schedules-mssql-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedulesmssqlnp-srv
spec:
  type: NodePort
  selector:
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      nodePort: 30036
